--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,11 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring.cloud-version>2021.0.4</spring.cloud-version>
-		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
-		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>		
+		<!-- MapStruct -->
+		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
+		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
+		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>		
 	</properties>
 
 	<dependencies>
