--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<awssdk.bom.version>2.17.247</awssdk.bom.version>
 		<spring.cloud-version>2021.0.4</spring.cloud-version>
 		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
+		<springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
 		<!-- MapStruct -->
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
@@ -103,7 +104,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
-
+		
+		<!-- Springdoc-openapi -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc-openapi-ui.version}</version>
+		</dependency>
+		
 		<!-- AWS SDK DynamoDB -->
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
