--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
 		<spring.cloud-version>2021.0.4</spring.cloud-version>
 		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
 		<springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
+				<awsxray.bom.version>2.11.0</awsxray.bom.version>
 		<!-- MapStruct -->
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<!-- DynamoDB Local -->
 		<dynamodb-local.version>[1.12,2.0)</dynamodb-local.version>
 		<sqlite4java-win32-x64.version>1.0.392</sqlite4java-win32-x64.version>
 	</properties>
@@ -119,6 +121,35 @@
 			<version>${sqlite4java-win32-x64.version}</version>
 			<!-- <scope>test</scope> -->
 		</dependency>
+		<!-- AWS X-Ray -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-aws-sdk</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-aws-sdk-v2</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-apache-http</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-aws-sdk-instrumentor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-aws-sdk-v2-instrumentor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-xray-recorder-sdk-spring</artifactId>
+		</dependency>		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -130,6 +161,14 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- AWS X-Ray -->
+			<dependency>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-xray-recorder-sdk-bom</artifactId>
+				<version>${awsxray.bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>			
 			<!-- Spring Cloud -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
