--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ server:
   shutdown: graceful
 
 spring:
-  application:    name: sample-backend    
+  application:
+    name: sample-backend    
   profiles:
     active:
     - dev
