--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,8 @@ aws:
     
   xray:
     tracing-filter-name: sample-backend-dynamodb
+
+# Micrometer Tracing         
+logging:
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]" 
