--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.9</version>
+		<version>3.0.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -16,14 +16,14 @@
 	<description>Spring Boot Backend Sample</description>
 	<properties>
 		<java.version>17</java.version>
-		<awssdk.bom.version>2.17.247</awssdk.bom.version>
-		<spring.cloud-version>2021.0.5</spring.cloud-version>
+		<awssdk.bom.version>2.20.55</awssdk.bom.version>
+		<spring.cloud-version>2022.0.2</spring.cloud-version>
 		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
-		<springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
-		<awsxray.bom.version>2.11.0</awsxray.bom.version>
+		<springdoc-openapi-ui.version>2.1.0</springdoc-openapi-ui.version>
+		<awsxray.bom.version>2.14.0</awsxray.bom.version>
 		<!-- MapStruct -->
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
-		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
+		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<!-- DynamoDB Local -->
 		<dynamodb-local.version>[1.12,2.0)</dynamodb-local.version>
@@ -92,16 +92,16 @@
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>${logstash-logback-encoder.version}</version>
 		</dependency>
-		<!-- Spring Cloud Sleuth -->
+		<!-- Micrometer Tracing -->
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>micrometer-tracing-bridge-brave</artifactId>
 		</dependency>
 		<!-- Springdoc-openapi -->
 		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${springdoc-openapi-ui.version}</version>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>${springdoc-openapi-ui.version}</version>    	
 		</dependency>
 		<!-- AWS SDK DynamoDB -->
 		<dependency>
@@ -169,6 +169,14 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- Micrometer Tracing -->
+			<dependency>
+	            <groupId>io.micrometer</groupId>
+	            <artifactId>micrometer-tracing-bom</artifactId>
+	            <version>${micrometer-tracing.version}</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+	        </dependency>			
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
