--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.3</version>
+		<version>3.2.2</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -17,16 +17,18 @@
 	<properties>
 		<java.version>17</java.version>
 		<awssdk.bom.version>2.20.144</awssdk.bom.version>
-		<spring.cloud-version>2022.0.4</spring.cloud-version>
+		<spring.cloud-version>2023.0.0</spring.cloud-version>
 		<logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
-		<springdoc-openapi-ui.version>2.2.0</springdoc-openapi-ui.version>
+		<springdoc-openapi-ui.version>2.3.0</springdoc-openapi-ui.version>
 		<awsxray.bom.version>2.14.0</awsxray.bom.version>
 		<!-- MapStruct -->
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<!-- DynamoDB Local -->
-		<dynamodb-local.version>2.1.0</dynamodb-local.version>
+		<dynamodb-local.version>2.2.1</dynamodb-local.version>
+		<!-- jetty issue workaround version -->
+		<jetty.workaround.version>11.0.15</jetty.workaround.version>
 	</properties>
 	<dependencies>
 		<!-- Spring Boot Web -->
@@ -189,7 +191,45 @@
 				<version>${spring.cloud-version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>	
+			</dependency>
+			<!-- DynamoDB jetty version incompatible with Spring Boot 3.2 jetty version -->
+			<!-- https://github.com/awslabs/amazon-dynamodb-local-samples/issues/4 -->
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-server</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-io</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-util</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-http</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>			
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-client</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-alpn</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>		
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-alpn-client</artifactId>
+				<version>${jetty.workaround.version}</version>
+			</dependency>
+				
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
