spring.thymeleaf.check-template-locationプロパティの対応

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,11 @@ spring:
 #    - xray # X-Ray Enabled
   jackson:
     property-naming-strategy: SNAKE_CASE
-
   lifecycle:
     timeout-per-shutdown-phase: 20s   
-
+  thymeleaf:
+    check-template-location: false 
+    
 aws:
   dynamodb:
     todo-tablename: Todo
