ログの設定修正

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -8,5 +8,6 @@ logging:
   level:
     org.springframework: INFO
     org.springframework.jdbc: INFO
-#    org.thymeleaf: DEBUG
-    com.example: DEBUG
+#    com.example: DEBUG
+    com.example: INFO
+#    software.amazon.awssdk: DEBUG
