--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,8 +11,8 @@ logging:
   level:
     org.springframework: INFO
     org.springframework.jdbc: INFO
-#    org.thymeleaf: DEBUG
     com.example: DEBUG
+#    software.amazon.awssdk: DEBUG
     
 aws:
   dynamodb:
