--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,10 @@ spring:
     timeout-per-shutdown-phase: 20s   
   thymeleaf:
     check-template-location: false 
-    
+# Virtual Thread                  
+  threads:
+    virtual:
+      enabled: true   
 aws:
   dynamodb:
     todo-tablename: Todo
