--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.2</version>
+		<version>3.3.2</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<awssdk.bom.version>2.20.144</awssdk.bom.version>
-		<spring.cloud-version>2023.0.0</spring.cloud-version>
+		<spring.cloud-version>2023.0.3</spring.cloud-version>
 		<logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
 		<springdoc-openapi-ui.version>2.3.0</springdoc-openapi-ui.version>
 		<awsxray.bom.version>2.14.0</awsxray.bom.version>
@@ -199,8 +199,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
@@ -219,6 +217,7 @@
 							<version>${lombok-mapstruct-binding.version}</version>
 						</path>
 					</annotationProcessorPaths>
+					<release>${java.version}</release>
 				</configuration>
 			</plugin>
 			<!-- Lombok -->
