--- a/pom.xml
+++ b/pom.xml
@@ -220,10 +220,11 @@
 					<release>${java.version}</release>
 				</configuration>
 			</plugin>
-			<!-- Lombok -->
+			<!-- Spring Boot Maven Plugin -->	
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- Lombok -->				
 				<configuration>
 					<excludes>
 						<exclude>
@@ -233,6 +234,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- CycloneDX SBOM -->
+	        <plugin>
+    	        <groupId>org.cyclonedx</groupId>
+        	    <artifactId>cyclonedx-maven-plugin</artifactId>
+        	</plugin>			
 		</plugins>
 	</build>
 </project>
