--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,9 +1,9 @@
 management:
   endpoints:
     web:
-      exposure:
-        include: "*" 
-                   
+      discovery:
+        enabled: false
+        
 logging:
   level:
     org.springframework: INFO
