--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- Generate Build Information (META-INF/build-info.properties)- -->
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>				
 				<!-- Lombok -->				
 				<configuration>
 					<excludes>
@@ -234,6 +242,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- Git Commit Id Plugin -->
+			<plugin>
+				<groupId>io.github.git-commit-id</groupId>
+				<artifactId>git-commit-id-maven-plugin</artifactId>
+			</plugin>			
 			<!-- CycloneDX SBOM -->
 	        <plugin>
     	        <groupId>org.cyclonedx</groupId>
