--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,6 +6,11 @@ management:
     web:
       exposure:
         include: "*" 
+  info:
+    os:
+      enabled: true
+    java:
+      enabled: true            
                    
 logging:
   level:
