--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>3.3.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
@@ -16,17 +16,17 @@
 	<description>Spring Boot Backend Sample</description>
 	<properties>
 		<java.version>21</java.version>
-		<awssdk.bom.version>2.20.144</awssdk.bom.version>
 		<spring.cloud-version>2023.0.3</spring.cloud-version>
-		<logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
-		<springdoc-openapi-ui.version>2.3.0</springdoc-openapi-ui.version>
-		<awsxray.bom.version>2.17.0</awsxray.bom.version>
+		<logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
+		<springdoc-openapi-ui.version>2.6.0</springdoc-openapi-ui.version>
+		<awssdk.bom.version>2.29.19</awssdk.bom.version>
+		<awsxray.bom.version>2.18.2</awsxray.bom.version>
 		<!-- MapStruct -->
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
-		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+		<org.mapstruct.version>1.6.3</org.mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<!-- DynamoDB Local -->
-		<dynamodb-local.version>2.3.0</dynamodb-local.version>
+		<dynamodb-local.version>2.5.3</dynamodb-local.version>
 	</properties>
 	<dependencies>
 		<!-- Spring Boot Web -->
