Repositoryの性能ログ、非同期実行依頼ログを出力するための対応

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,6 +17,7 @@ logging:
     org.springframework: INFO
     org.springframework.jdbc: INFO
     com.example: DEBUG
+    com.example.fw.web.aspect.LogAspect: TRACE  		
 #    software.amazon.awssdk: DEBUG
     
 aws:
