RestControllerAdviceのhandleHttpMessageNotReadableメソッドのエラーレスポンス作成処理の改善

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
 #    - xray # X-Ray Enabled
   jackson:
     property-naming-strategy: SNAKE_CASE
+    # Resourceオブジェクトに存在しないフィールドがJSONに指定されていた場合、エラーとする
+    deserialization:
+      fail-on-unknown-properties: true
   lifecycle:
     timeout-per-shutdown-phase: 20s   
   thymeleaf:
