Spring Cloud for AWSの設定修正

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,3 +1,9 @@
+# Spring Cloud for AWS Parameter Store & Integration Secreters Manager Integration
+spring:
+  config:
+    import: 
+    - aws-parameterstore:/config/common;/config/sample-backend
+    - aws-secretsmanager:/secrets/database-secrets?prefix=spring.datasource.
 management:
   endpoints:
     web:
