--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,9 +1,10 @@
 # Spring Cloud for AWS Parameter Store & Integration Secreters Manager Integration
 spring:
   config:
-    import: 
-    - aws-parameterstore:/config/common;/config/sample-backend
-    - aws-secretsmanager:/secrets/database-secrets?prefix=spring.datasource.
+    import:
+      - aws-parameterstore:/config/common
+      - aws-parameterstore:/config/sample-backend
+      - aws-secretsmanager:/secrets/database-secrets?prefix=spring.datasource.
 management:
   endpoints:
     web:
