Spring Cloud for AWSの設定修正

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -2,9 +2,9 @@
 spring:
   config:
     import:
-      - "aws-parameterstore:/config/common"
-      - "optional:aws-parameterstore:/config/sample-backend"
-      - "aws-secretsmanager:/secrets/database-secrets?prefix=spring.datasource."
+      - 'aws-parameterstore:/config/common/'
+      - 'optional:aws-parameterstore:/config/sample-backend/'
+      - 'aws-secretsmanager:/secrets/database-secrets/?prefix=spring.datasource.'
 management:
   endpoints:
     web:
