--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -2,8 +2,7 @@
 spring:
   config:
     import:
-      - 'aws-parameterstore:/config/common/'
-      - 'optional:aws-parameterstore:/config/sample-backend/'
+      - 'optional:aws-parameterstore:/config/common/;/config/sample-backend/'
 
 management:
   endpoints:
