日本語固有の入力チェック対応

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <springdoc-openapi-ui.version>2.8.4</springdoc-openapi-ui.version>
         <awssdk.bom.version>2.29.19</awssdk.bom.version>
         <awsxray.bom.version>2.18.2</awsxray.bom.version>
+        <terasoluna.version>5.9.0.RELEASE</terasoluna.version>
         <!-- logback-access -->
         <logback-access.version>2.0.6</logback-access.version>
         <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
@@ -72,6 +73,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+		<!-- TERASOLUNA CodePoint -->
+		<dependency>
+			<groupId>org.terasoluna.gfw.codepoints</groupId>
+			<artifactId>terasoluna-gfw-codepoints-jisx0201</artifactId>
+			<version>${terasoluna.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.terasoluna.gfw.codepoints</groupId>
+			<artifactId>terasoluna-gfw-codepoints-jisx0208</artifactId>
+			<version>${terasoluna.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.terasoluna.gfw.codepoints</groupId>
+			<artifactId>terasoluna-gfw-codepoints-jisx0213kanji</artifactId>
+			<version>${terasoluna.version}</version>
+		</dependency>        
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
