--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
-        <spring-cloud-aws.version>3.4.0</spring-cloud-aws.version>        
+        <spring-cloud-aws.version>3.4.0</spring-cloud-aws.version>
         <springdoc-openapi-ui.version>2.8.4</springdoc-openapi-ui.version>
         <awssdk.bom.version>2.31.76</awssdk.bom.version>
         <awsxray.bom.version>2.18.2</awsxray.bom.version>
@@ -73,22 +73,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-		<!-- TERASOLUNA CodePoint -->
-		<dependency>
-			<groupId>org.terasoluna.gfw.codepoints</groupId>
-			<artifactId>terasoluna-gfw-codepoints-jisx0201</artifactId>
-			<version>${terasoluna.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.terasoluna.gfw.codepoints</groupId>
-			<artifactId>terasoluna-gfw-codepoints-jisx0208</artifactId>
-			<version>${terasoluna.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.terasoluna.gfw.codepoints</groupId>
-			<artifactId>terasoluna-gfw-codepoints-jisx0213kanji</artifactId>
-			<version>${terasoluna.version}</version>
-		</dependency>        
+        <!-- TERASOLUNA CodePoint -->
+        <dependency>
+            <groupId>org.terasoluna.gfw.codepoints</groupId>
+            <artifactId>terasoluna-gfw-codepoints-jisx0201</artifactId>
+            <version>${terasoluna.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.terasoluna.gfw.codepoints</groupId>
+            <artifactId>terasoluna-gfw-codepoints-jisx0208</artifactId>
+            <version>${terasoluna.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.terasoluna.gfw.codepoints</groupId>
+            <artifactId>terasoluna-gfw-codepoints-jisx0213kanji</artifactId>
+            <version>${terasoluna.version}</version>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -121,6 +121,11 @@
         <dependency>
             <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-aws-starter-secrets-manager</artifactId>
+        </dependency>
+        <!-- Spring Cloud for AWS Micrometer CloudWatch Integration-->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-cloudwatch2</artifactId>
         </dependency>
         <!-- Springdoc-openapi -->
         <dependency>
