Spring Cloud for AWS CloudWatchメトリクス統合機能の修正

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
   port: 8000
 # Tomcat metrics enabled
-# Spring Cloud for AWS Micrometer CloudWatch Integration Enabled if local testing is required
+# Spring Cloud for AWS Micrometer CloudWatch Metrics Integration Enabled if local testing is required
 #  tomcat:
 #    mbeanregistry:
 #      enabled: true
@@ -16,7 +16,7 @@ management:
       enabled: true
     java:
       enabled: true            
-# Spring Cloud for AWS Micrometer CloudWatch Integration Enabled if local testing is required
+# Spring Cloud for AWS Micrometer CloudWatch Metrics Integration Enabled if local testing is required
 #  cloudwatch:
 #    metrics:
 #      export:
