--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     virtual:
       enabled: true
 
-# Spring Cloud for AWS Micrometer CloudWatch Integration Common Configuration
+# Spring Cloud for AWS Micrometer CloudWatch Metrics Integration Common Configuration
 # Default Disabled For Local Development
 management:
   cloudwatch:
