独自に拡張したフレームワーク機能のプロパティのベース名をexampleに統一、プロパティ名の一部見直し

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ management:
     os:
       enabled: true
     java:
-      enabled: true
+      enabled: true    
 # Spring Cloud for AWS Micrometer CloudWatch Metrics Integration Enabled if local testing is required
 #  cloudwatch:
 #    metrics:
@@ -30,8 +30,9 @@ logging:
     com.example: DEBUG
     com.example.fw.web.aspect.LogAspect: TRACE		
 #    software.amazon.awssdk: DEBUG
-    
-aws:
+# 拡張フレームワーク機能の設定
+example:
+# DynamoDB Local
   dynamodb:
     dynamodblocal:
       port: 18000
