--- a/src/main/resources/application-log_container.yml
+++ b/src/main/resources/application-log_container.yml
@@ -1,5 +1,6 @@
 # Tomcat Access Log
-logback:
-  access:
-#    enabled: false
-    config: conf/logback-access-json.xml
+example:
+  logback:
+    access:
+#      enabled: false
+      config: conf/logback-access-json.xml
