--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   application:
-    name: sample-backend-dynamodb
+    name: sample-backend
   profiles:
     active:
     - dev
     - log_default  #logging in default format
 #    - log_container  #logging in json format
-#    - xray # X-Ray Enabled
+#    - xray  #X-Ray Enabled
   messages:
     basename: messages,messages-fw-common,messages-fw-web, messages-common
   jackson:
@@ -14,22 +14,33 @@ spring:
     # Resourceオブジェクトに存在しないフィールドがJSONに指定されていた場合、エラーとする
     deserialization:
       fail-on-unknown-properties: true
+# Graceful Shutdown
   lifecycle:
-    timeout-per-shutdown-phase: 20s   
+    timeout-per-shutdown-phase: 20s
   thymeleaf:
-    check-template-location: false 
+    check-template-location: false
 # Virtual Thread                  
   threads:
     virtual:
       enabled: true
-# Spring Cloud for AWS Parameter Store Integration Integration
+# Transaction Rollback
+  transaction:
+    rollback-on-commit-failure: true
+# HikariCP AutoCommit false
+  datasource:
+    hikari:
+      auto-commit: false
+
+# Spring Cloud for AWS Parameter Store Integration & Secrets Manager Integration
 # Default Disabled For Local Development
   cloud:
     aws:
       parameterstore:
         enabled: false
-
-# Spring Cloud for AWS Micrometer CloudWatch Metrics Integration Common Configuration
+      secretsmanager:
+        enabled: false
+      
+# Spring Cloud for AWS Micrometer CloudWatch Integration Common Configuration
 # Default Disabled For Local Development
 management:
   cloudwatch:
@@ -37,15 +48,30 @@ management:
       export:
         enabled: false
         step: 10s
+# Mybatis
+mybatis:
+  type-aliases-package: com.example.backend.domain.model
+  configuration:
+    map-underscore-to-camel-case: true
 
-aws:
-  dynamodb:
-    todo-tablename: Todo
-# X-Ray SDK(not ADOT)    
+# 拡張フレームワーク機能の設定
+example:
+# Dynamic Routing DataSource (disabled on Sample AP Default)
+  datasource:
+    dynamic-routing:
+      enabled: false
+# Dynamic Routing DataSource HikariCP AutoCommit false
+    read:
+      hikari:
+        auto-commit: false
+    write:
+      hikari:
+        auto-commit: false
+# X-Ray SDK(not ADOT)
   xray:
     tracing-filter-name: ${spring.application.name}
 
 # Tomcat Access Log
-#logback:
-#  access:
-#    enabled: false    
+#  logback:
+#    access:
+#      enabled: false   
