--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,11 @@ management:
       export:
         enabled: false
         step: 10s
+# Dislabled Metrics Exporting By OpenTelemetry
+  otlp:
+    metrics:
+      export:
+        enabled: false
 # Mybatis
 mybatis:
   type-aliases-package: com.example.backend.domain.model
