SSMパラメータストア、SecretsManager統合機能の設定改善

--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -10,8 +10,8 @@ spring:
       parameterstore:
         enabled: true
   config:
-    import: 
-      - optional:aws-parameterstore:/config/common/;/config/${spring.application.name}/
+    import:
+      - optional:aws-parameterstore:/config/${PROJECT_NAME}/${ENV_NAME}/common/;/config/${PROJECT_NAME}/${ENV_NAME}/${spring.application.name}/      
         
 # Spring Boot Actuator
 management:
